//Jose I. Retamal
//GMIT 2020

//Define interface for connect to profiles database

syntax = "proto3";

package wcity;

import "profiles_shared.proto";

option java_multiple_files = true;
option java_package = "io.grpc.wcity.profiles";
option java_outer_classname = "ProfilesDBProto";
option objc_class_prefix = "RPC";

service ProfilesDB {
    rpc SearchAllDBA(SearchAllRequest)  returns (stream SearchAllResult);
    rpc GetAllCitysDBA(GetAllRequest) returns (stream City);
    rpc GetAllPlacesDBA(GetAllRequest) returns(stream Place);
    rpc CreateUser (User) returns (CreateUserResponsePDB);
    rpc UpdateUserRequest (User) returns (CreateUserResponsePDB);
    rpc GetUser (GetUserRequestPDB) returns (UserResponsePDB);
    rpc CreateCity (City) returns (CityResponsePDB);
    rpc UpdateCityRequest (City) returns (CityResponsePDB);
    rpc GetCity (CityRequestPDB) returns (CityResponsePDB);
    rpc CreatePlaceRequest (Place) returns (PlaceResponsePDB);
    rpc UpdatePlaceRequest (Place) returns (PlaceResponsePDB);
    rpc GetPlace (PlaceRequestPDB) returns (Place);
    rpc VisitCity (VisitCityRequestPDB) returns (VisitCityResponsePDB);
    rpc VisitPlace (VisitPlaceRequestPDB) returns (VisitPlaceResponsePDB);
    rpc GetVisitedCitys (VisitedCitysRequestPDB) returns (VisitedCitysResponsePDB);
    rpc GetVisitedPlaces (VisitedPlacesRequestPDB) returns (VisitedPlacesResponsePDB);
    rpc GetCityPlaces (CityRequestPDB) returns (VisitedPlacesResponsePDB);

}
message CreateUserResponsePDB {
    bool valid = 1;
    User user =2;
}
message GetUserRequestPDB {
    string email = 2;
}
message UserResponsePDB {
    bool valid = 1;
    User user = 2;
}
message CityRequestPDB {
    string name = 1;
    string country = 2;
}
message CityResponsePDB {
    bool valid = 1;
    City city = 2;
}
message PlaceRequestPDB {
    string name = 1;
    string city = 2;
    string country = 3;
}
message PlaceResponsePDB {
    bool valid = 1;
    Place place = 2;
}
message UpdatedUserRequestPDB {
    string email = 1;
    string name = 2;
    string description = 3;
}
message VisitedCitysRequestPDB {
    string email = 1;
}
message VisitedCitysResponsePDB {
    string email = 1;
    repeated City citys = 2;
}
message VisitCityRequestPDB {
    string userEmail =1;
    int32 cityId = 2;
}
message VisitCityResponsePDB {
    bool valid = 1;
    string timeStamp = 2;
}
message CityPlacesRequestPDB {
    int32 cityId = 1;
}
message CityPlacesResponsePDB {
    bool valid = 1;
    repeated Place places = 4;
}
message VisitPlaceRequestPDB {
    string userEmail = 1;
    int32 placeId = 2;
}
message VisitPlaceResponsePDB {
    bool valid = 1;
    string timeStamp = 2;
}
message VisitedPlacesRequestPDB {
    string email = 1;
}
message VisitedPlacesResponsePDB {
    string email = 1;
    repeated Place places = 2;
}
